@@ -79,6 +79,12 @@ module ActiveRecord
             
               before_save :save_cached_tag_list
               after_save :save_tags
+              
+              if respond_to?(:named_scope)
+                named_scope :tagged_with, lambda{ |tags, options|
+                  find_options_for_find_tagged_with(tags, options)
+                }
+              end
             end
             
             include ActiveRecord::Acts::TaggableOn::InstanceMethods
